@@ -18,6 +18,11 @@ Philipp "philsmd" Schmidt <philsmd@hashcat.net> (@philsmd)
 
 Gabriele "matrix" Gristina <matrix@hashcat.net> (@gm4tr1x)
 
+<<<<<<< HEAD
+=======
+* SolarWinds Orion, SHA512(PBKDF2-HMAC-SHA1), kernel module
+* sha1(md5($pass).$salt) kernel module
+>>>>>>> 54f8811b4 (update SolarWinds Orion patch (1))
 * gzip wordlists feature
 * SHA-224 kernel module + optimizations
 * Some AES OpenCL kernel module optimizations
