@@ -280,6 +280,7 @@ NVIDIA GPUs require "NVIDIA Driver" (418.56 or later) and "CUDA Toolkit" (10.1 o
 - Ethereum Pre-Sale Wallet, PBKDF2-HMAC-SHA256
 - Ethereum Wallet, PBKDF2-HMAC-SHA256
 - Ethereum Wallet, SCRYPT
+<<<<<<< HEAD
 - 7-Zip
 - RAR3-hp
 - RAR5
@@ -314,6 +315,12 @@ NVIDIA GPUs require "NVIDIA Driver" (418.56 or later) and "CUDA Toolkit" (10.1 o
 - PunBB
 - MyBB 1.2+, IPB2+ (Invision Power Board)
 - TOTP (HMAC-SHA1)
+=======
+- Ethereum Pre-Sale Wallet, PBKDF2-HMAC-SHA256
+- Ansible Vault
+- SolarWinds Orion, SHA512(PBKDF2-HMAC-SHA1)
+- Plaintext
+>>>>>>> 54f8811b4 (update SolarWinds Orion patch (1))
 
 ##
 ## Attack-Modes
