@@ -51,6 +51,7 @@
 - Added hash-mode: sha256(md5($pass))
 - Added hash-mode: sha256(sha256_bin(pass))
 - Added hash-mode: sha256(sha256($pass).$salt)
+- Added hash-mode: SolarWinds Orion, SHA512(PBKDF2-HMAC-SHA1)
 
 ##
 ## Bugs
